--- a/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
+++ b/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="funcFormat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="zukiRecognizer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="funcFormat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="app.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="zukiRecognizer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
