--- a/TeruzukiConsole/TeruzukiConsole.vcxproj
+++ b/TeruzukiConsole/TeruzukiConsole.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>realsense2.lib;opencv_pvl331.lib;opencv_world331.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>realsense2.lib;opencv_pvl341.lib;opencv_world341.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -144,7 +144,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>realsense2.lib;opencv_pvl331.lib;opencv_world331.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>realsense2.lib;opencv_pvl341.lib;opencv_world341.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -154,6 +154,7 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="configCamera.h" />
     <ClInclude Include="funcFormat.h" />
+    <ClInclude Include="funcStream.h" />
     <ClInclude Include="zukiRecognizer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="funcFormat.cpp" />
+    <ClCompile Include="funcStream.cpp" />
     <ClCompile Include="zukiRecognizer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
