--- a/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
+++ b/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="zukiRecognizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="funcStream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="zukiRecognizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="funcStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
