--- a/TeruzukiConsole/TeruzukiConsole.vcxproj
+++ b/TeruzukiConsole/TeruzukiConsole.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="configCamera.h" />
     <ClInclude Include="funcFormat.h" />
+    <ClInclude Include="funcGeometry3D.h" />
     <ClInclude Include="funcStream.h" />
     <ClInclude Include="zukiRecognizer.h" />
     <ClInclude Include="stdafx.h" />
@@ -162,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="funcFormat.cpp" />
+    <ClCompile Include="funcGeometry3D.cpp" />
     <ClCompile Include="funcStream.cpp" />
     <ClCompile Include="zukiRecognizer.cpp" />
     <ClCompile Include="stdafx.cpp">
