--- a/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
+++ b/TeruzukiConsole/TeruzukiConsole.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="funcStream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="funcGeometry3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="funcStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="funcGeometry3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
